tests/machine/x/pascal/group_by_sort.error
line: 105
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/group_by_sort.pas
group_by_sort.pas(86,33) Error: Identifier not found "g"
group_by_sort.pas(88,16) Error: Identifier not found "g"
group_by_sort.pas(90,37) Error: Illegal qualifier
group_by_sort.pas(90,20) Error: Incompatible type for arg no. 3: Got "{Array Of Const/Constant Open} Array of TArray$1$crcE41905E8", expected "{Open} Array Of Pointer"
group_by_sort.pas(88,16) Error: Cannot find an enumerator for the type "<erroneous type>"
group_by_sort.pas(95,16) Error: Identifier not found "g"
group_by_sort.pas(97,37) Error: Illegal qualifier
group_by_sort.pas(97,20) Error: Incompatible type for arg no. 3: Got "{Array Of Const/Constant Open} Array of TArray$1$crcE41905E8", expected "{Open} Array Of Pointer"
group_by_sort.pas(95,16) Error: Cannot find an enumerator for the type "<erroneous type>"
group_by_sort.pas(17,19) Error: Can't read or write variables of this type
group_by_sort.pas(105) Fatal: There were 10 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

